# dotfiles

./: .chezmoiignore  .dir-locals.el  .envrc  .gitignore  .gitlab-ci.yml  .guix-channel  .luarc.json  AUTHORS  ChangeLog  HACKING  Jenkinsfile  Makefile  Makefile.am  NEWS  PROJECT  README  README.md  TODO  bootstrap  build.sh  channels.scm  configure  configure.ac  deploy.sh  dot_Xresources  dot_alerta.conf.tmpl  dot_ansible.cfg  dot_bash_completion  dot_bash_guix.tmpl  dot_bash_profile  dot_bash_vterm  dot_bashrc  dot_direnvrc  dot_emacs  dot_gdbinit  dot_gitconfig  dot_gnus.el  dot_gtkrc-2.0  dot_guile  dot_inputrc  (+46 more)
.github/workflows/: main.yml
News/: INBOX.SCORE
api/v1/: groupversion_info.go  workstation_types.go  zz_generated.deepcopy.go
bash/: .bashrc
chezmoi/: .chezmoiignore  Jenkinsfile  README.md  dot_Xmodmap  dot_bash_profile  dot_bashrc  dot_kodirc  dot_mongorc.js
chezmoi/dot_stumpwm.d/: init.lisp
cmd/: main.go
config/manager/: kustomization.yaml
config/network-policy/: allow-metrics-traffic.yaml
config/prometheus/: monitor.yaml
config/rbac/: role.yaml  service_account.yaml
config/samples/: workstation_v1_workstation.yaml
dhall/: xmenu.dhall
dhall/mail/: majordomo.dhall
dhall/ssh/: ssh.dhall.gpg
doc/: dotfiles.texi
dot_bash.d/: bash.scm  majordomo.bash  mjru.bash  slack.bash.tmpl
dot_bash_completion.d/: connect
dot_config/: greenclip.cfg  imapnotify.conf.tmpl
dot_config/aichat/: config.yaml
dot_config/alacritty/: alacritty.toml  alacritty.yml
dot_config/cagebreak/: config
dot_config/cava/: config
dot_config/dunst/: dunstrc  dunstrc.tmpl
dot_config/espanso/: default.yml
dot_groovy/: groovysh.rc
dot_screenlayout/: private_executable_intel-and-amdgpu.sh
dot_sshrc.d/: dot_bashrc  dot_tmux.conf
dot_stumpwm.d/: adb.lisp  admin.lisp  android.lisp  audio.lisp  autostart.lisp  bittorrent.lisp  bq.lisp  clipboard.lisp  cpu.lisp  disk.lisp  display-0.lisp  display-1.lisp  docker.lisp  documentation.lisp  emacs.lisp  gaps.lisp  group-1.lisp  init.lisp  keys.lisp  kodi.lisp  kubernetes.lisp  kvm.lisp  mail.lisp  majordomo.lisp  mem.lisp  mjru.lisp  mode-line.lisp  mpv.lisp  nav.lisp  notify.lisp  password.lisp  repl.lisp  rest.lisp  rofi.lisp  screenshoot.lisp  spb.lisp  streamlink.lisp  swank.lisp  term.lisp  text-editors.lisp  (+11 more)
dot_tmuxifier-layouts/: backup.session.sh  backup.window.sh  blog.session.sh  blog.window.sh  elk-curator.window.sh  elk-health.window.sh  elk-logs.window.sh  elk-shards.window.sh  elk.session.sh  elk.window.sh  guix-machines.window.sh  guix.session.sh  guix.window.sh  kubernetes-cert-manager-logs.window.sh  kubernetes-cilium.window.sh  kubernetes-flux-system.window.sh  kubernetes-flux.window.sh  kubernetes-harbor.window.sh  kubernetes-kube-system.window.sh  kubernetes-opensearch.window.sh  kubernetes-pdns.window.sh  kubernetes-piraeus.window.sh  kubernetes-pods.window.sh  kubernetes.session.sh  web.session.sh.tmpl
dotfiles/: Jenkinsfile  README.md  build.sh  channels-current-guix-image-builder.scm  channels-current-guix-image-workstation.scm  channels-current-guixsd.scm  channels-current-local-file-pc0.scm  channels-current-local-file.scm  channels-current.scm  channels-guix-guixsd.scm  channels-guix-mumble.scm  channels-workstation.scm  channels.scm  fileshelter.conf  lspci.txt  spb.scm  test.sh
emacs/: .dir-locals.el  .emacs  .emacs   .gnus.el  debbugs-gnus.el  erc.el
etc/: pc0-install.sh  web99-home-btrfs.sh  web99-home-ext4.sh
fedora/: config.json
fiore/: cgitrc  clover.scm  deploy.scm  dotfiles.scm  guix-manifest.scm  guix-packages.scm  guix-weather-amd64.sh  install.scm  magnolia.scm  majordomo.scm  manifest.scm  packages.scm  php-fpm  vm.scm  vm.tmpl  wigust-manifest.scm  wigust-packages.scm
git/: .gitconfig
guile/: convert-music.scm  guix-channels-update  mypackages.scm  script.tmpl  ssh.scm
guix/: clover-config.scm  config-clover.scm  config-magnolia.scm  config.scm  cuirass-jobs.scm  dot_Xmodmap  dot_Xresources  dot_ansible.cfg  dot_bash_completion  dot_bash_guix  dot_bash_profile  dot_bash_vterm  dot_bashrc  dot_direnvrc  dot_emacs  dot_ghci  dot_gnus.el  dot_inputrc  dot_muttrc_localhost.tmpl  dot_muttrc_oleg_wugi.tmpl  dot_muttrc_test-mail_majordomo.tmpl  dot_muttrc_wigust_wugi.tmpl  dot_myclirc  dot_ratpoisonrc  dot_screenrc  dot_sshrc  dot_tmux.conf  emacs-info-colors-add-more-syntax.patch  emacs-xterm-mouse-support.patch  feh-issue-480.patch  guixsd.sh  hardcode-ndi-path.patch  magnolia-config.scm  niri-global-shortcut-portal.patch  obs-ndi-add-additional-latency-mode.patch  prometheus-shepherd-exporter.scm  system-clover.scm  system-gnome.scm  system-magnolia.scm  user.scm  (+2 more)
guixsd/: autossh-configure.sh  config.scm  guixsd.scm  kresd.conf  runner.scm  spb.scm  sudoers  update-all.sh  workstation.scm
manifests/: emacs.scm  games.scm  guix-collection.scm  majordomo.scm  misc.scm  oleg.scm  system.scm  wigust.scm
mbsyncrc/: .mbsyncrc
nix/: HACKING  flake.nix  gamescope-clipboard.patch  home-manager.nix  manifest.nix  nix.conf  spb.nix
offlineimap/: .offlineimap.py  .offlineimaprc
oleg/: .Xresources  .bash_aliases  .bash_gitlab_intr  .bash_profile  .bash_tmp  .bashrc  .emacs  .gitconfig  .gnus.el  .mbsyncrc  .mongorc.js  .myclirc  .tmux.conf
private_dot_emacs.d/: abbrev_defs  dot_elfeed-feeds.el  dot_mc-lists.el
private_dot_gnupg/: gpg-agent.conf
private_dot_ssh/: encrypted_mjru.conf  encrypted_private_authorized_keys  encrypted_private_config  encrypted_private_known_hosts  encrypted_private_mjru.conf  encrypted_private_spb.conf  private_known_hosts
private_dot_vnc/: executable_xstartup-firefox  executable_xstartup-quassel  executable_xstartup-stumpwm  xstartup  xstartup-firefox  xstartup-stumpwm  xstartup-twm
rsync/: .rsyncd.conf
stream/: stream_layered_image.py
tests/: connect.bats  executables.bats  guix.bats  mail.bats  majordomo.bats  mjru.bats  ssh-home.bats  ssh-mjru.bats
vosk/: flake.nix  receiver.py  run.py  sender.py  server.py
wugi/: config.scm  emacs-tramp-sudo.patch  qemu-evdev.patch
xmobar/: .xmobarrc
xorg/: .Xresources
(+3163 files in other folders)
